add option to defer loading results

--- a/options.html
+++ b/options.html
@@ -10,5 +10,10 @@
 <body>
     <input type="checkbox" id="bg_checkbox">
     <label for="bg_checkbox">Open results in the background</label>
+
+    <br>
+
+    <input type="checkbox" id="doNotLoad_checkbox">
+    <label for="doNotLoad_checkbox">Do not load results until the tab is clicked</label>
 </body>
 </html>
