--- a/loading.html
+++ b/loading.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Google Lens - Loading...</title>
     <link rel="stylesheet" href="style.css">
+    <script src="loading.js"></script>
 </head>
 <body>
     <div class="loading">
